2011-04-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-43
	* update "replace ModuleInstance", add "replace Sequence|Path"
	
2011-04-21 Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-42
	* Add "Import all" feature for PSets, EDSource, ESSources, ESModules and Services.
    * Some "Import all Paths" and "Import all Sequences" fixes.
    * Including progress bar dialog.

2011-04-15  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-41
	* Fix bug re importing OutputModules: they are now automatically
	  imported together with their stream. Further, endpaths containing 
	  output modules can be imported with their outputmodule, but only
	  when the corrsponding stream already exists (or was previously
	  imported)

2011-04-15  Andrea Bocci
	* tag V01-05-40
	* Fixes in (Smart)Rendering, simplified start script

2011-04-13  Raul Jimenez Estupinan  <raul.jimenez.estupinan@cern.ch>
	* tag V01-05-37
	* Import all Sequences. (Bug/feature 76150).
	* Import all Paths modifications. 

2011-04-12  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-36
	* Even more cleanup in subtable creation

2011-04-12  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-35
	* Better cleanup in subtable creation

2011-04-10  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-33/34
	* Add "replace-module-by-another-module-in-menu-globally" feature
	* Small fixes here and there

2011-04-09  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-32
	* Add missing file
	
2011-04-08  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-31
	* Adding Smart Renaming of modules/sequences/paths (replacement of substrings old => new)

2011-04-08  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-30
	* Adding Smart Reversioning of paths based on diff

2011-04-07  Martin Grunewald  <Martin.Grunewald@cern.ch>
	* tag V01-05-29
	* Improved color coding for EventContent
