@@ -1,3 +1,7 @@
+2011-04-27 Martin Grunewald  <Martin.Grunewald@cern.ch>
+	* tag V01-05-44
+	* fix of object selection by label/name, plugin/type and (now separate) parameter value
+
 2011-04-24 Martin Grunewald  <Martin.Grunewald@cern.ch>
 	* tag V01-05-43
 	* update "replace ModuleInstance", add "replace Sequence|Path"
